--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ body {
   top: 20vh;
   left: 5%;
   width: 90%;
-  height: 50vh;
+  height: auto;
+  display: block;
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
